# performance-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yaml  labels.yml  release-drafter.yml
.github/workflows/: ci.yml  enforce-labels.yml  publish-docs.yml  run-release-drafter.yml  sync-labels.yml
analytics/: __init__.py  amp.py  config.py  main.py  portfolio.py  portfolio.xlsx
analytics/cache/: LBEATREU Index_2026-06-01_2026-07-17.parquet  LBEATREU Index_2026-07-01_2026-07-21.parquet  LEU1TREU Index_2026-01-01_2026-07-16.parquet  LEU1TREU Index_2026-06-01_2026-07-16.parquet  LEU1TREU Index_2026-07-01_2026-07-16.parquet  portfolio_1595635_2026-06-01_2026-07-16.parquet  portfolio_1595635_2026-06-01_2026-07-17.parquet  portfolio_1595635_2026-07-01_2026-07-16.parquet  portfolio_79939970_2026-06-01_2026-07-17.parquet  portfolio_79939970_2026-07-01_2026-07-21.parquet  portfolio_989430_2026-01-01_2026-07-16.parquet  portfolio_989430_2026-07-01_2026-07-16.parquet
analytics/plots/: plot_attribution_heatmap.py  plot_bond_excess_returns.py  plot_heatmap.py  plot_selection_heatmap.py
docs/templates/: config.mako  credits.mako  logo.mako
project_name/: __init__.py
queries/: query.gql
tests/: example_test.py
