[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
authors = [
    {name = "Donner & Reuschel Luxemburg S.A.", email = "info@donner-reuschel.lu"}
]
description = "project_description"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools]
packages = ["project_name"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "project_name.__version__"}
dependencies = {file = ["requirements.txt"]}
